edited index and added recipes pages
Added recipes pages such as jpcurry, karaage, and teriyaki
updated the codebase of index to add these pages' links.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1> Odin Recipes </h1>
+        <a href="recipes/jpcurry.html"> Japanese Curry </a>
+        <a href="recipes/karaage.html"> Chicken Karaage </a>
+        <a href="recipes/teriyaki.html"> Chicken Teriyaki </a>
     </body>
 </html>
