--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     </head>
     <body>
         <h1> Odin Recipes </h1>
-        <a href="recipes/jpcurry.html"> Japanese Curry </a>
-        <a href="recipes/karaage.html"> Chicken Karaage </a>
-        <a href="recipes/teriyaki.html"> Chicken Teriyaki </a>
+        
+        <ul>
+        <li><a href="recipes/jpcurry.html"> Japanese Curry </a></li>
+        <li><a href="recipes/karaage.html"> Chicken Karaage </a></li>
+        <li><a href="recipes/teriyaki.html"> Chicken Teriyaki </a></li>
+        </ul>
+
+        
     </body>
 </html>
