--- a/recipes/karaage.html
+++ b/recipes/karaage.html
@@ -2,17 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title> Chicken Karaage recipe </title>
     </head>
     <body>
         <h1> Chicken Karaage recipe </h1>
         <img src="https://www.allrecipes.com/thmb/q6MixMa_ArWtgjRn0cFqIWrDZQU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3503916-3805fb2d38c74617b61332b747a66e00.jpg" alt="finished image of Chicken Karaage" height="360" width="420">
         
-        
-        <p>Try this simple yet delicious chicken karaage recipe for Japanese-style fried chicken flavored with ginger, garlic, sake, and soy sauce. 
-            Serve as an appetizer or with rice and veggies to make a yummy meal.
-            It even tastes good cold; my mom used to make this to take with us on picnics.</p>
-
+        <div class="intro">
+            <p>Try this simple yet delicious chicken karaage recipe for Japanese-style fried chicken flavored with ginger, garlic, sake, and soy sauce. 
+                Serve as an appetizer or with rice and veggies to make a yummy meal.
+                It even tastes good cold; my mom used to make this to take with us on picnics.</p>
+        </div>
         <h1> Ingredients </h1>
 
 
