--- a/recipes/teriyaki.html
+++ b/recipes/teriyaki.html
@@ -2,19 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title> Chicken Teriyaki recipe </title>
     </head>
     <body>
         <h1> Chicken Teriyaki recipe</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F874895.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="finished image of Chicken Teriyaki" height="360" width="420">
         
-        
-        <p>This grilled teriyaki chicken is very easy to prepare and great for a hot summer's evening.
-            Leftovers are delicious on a green salad or in a sandwich. Be sure to grill very hot and very fast.</p>
+        <div class="intro">
+            <p>This grilled teriyaki chicken is very easy to prepare and great for a hot summer's evening.
+                Leftovers are delicious on a green salad or in a sandwich. Be sure to grill very hot and very fast.</p>
+        </div>
+
 
         <h1> Ingredients </h1>
-
-
         <ul>
             <li>1 cup teriyaki sauce</li>
             <li>¼ cup lemon juice</li>
