--- a/recipes/jpcurry.html
+++ b/recipes/jpcurry.html
@@ -2,19 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title> Japanese Curry recipe </title>
     </head>
     <body>
         <h1> Japanese Curry recipe </h1>
         <img src="https://www.allrecipes.com/thmb/8FfLo363HrdCZ1I94ojJpDvFtmM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4917776-japanese-curry-MMSVA-4x3-1-ea36281f103d4aa7a7c289714cc498df.jpg" alt="finished image of Japanese Curry" height="360" width="420">
         
-        
-        <p> Craving comfort? Dive into Japanese curry, a sweet and savory hug in a bowl. 
-            Unlike its spicy cousins, this roux-coated wonder blends mild spices and fluffy rice, warming hearts as easily as stomachs.
-            Born from British influence, it's uniquely Japanese, a staple on family tables for generations. 
-            Why? It's simple, affordable, endlessly customizable, and brimming with umami goodness. From meaty delights to veggie feasts, there's a curry for every mood. 
-            So, grab your spoon and join the Japanese tradition of curry love - one savory bite at a time.</p>
-
+        <div class="intro">
+            <p> Craving comfort? Dive into Japanese curry, a sweet and savory hug in a bowl. 
+                Unlike its spicy cousins, this roux-coated wonder blends mild spices and fluffy rice, warming hearts as easily as stomachs.
+                Born from British influence, it's uniquely Japanese, a staple on family tables for generations. 
+                Why? It's simple, affordable, endlessly customizable, and brimming with umami goodness. From meaty delights to veggie feasts, there's a curry for every mood. 
+                So, grab your spoon and join the Japanese tradition of curry love - one savory bite at a time. </p>
+        </div>
         <h1> Ingredients </h1>
 
 
