applied temporary margin, padding and borders
just some temporary boxes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <body>
         <h1> Odin Recipes </h1>
         
+        <div class="lists">
         <ul>
-        <li><a href="recipes/jpcurry.html"> Japanese Curry </a></li>
-        <li><a href="recipes/karaage.html"> Chicken Karaage </a></li>
-        <li><a href="recipes/teriyaki.html"> Chicken Teriyaki </a></li>
+        <li id="one"><a href="recipes/jpcurry.html"> Japanese Curry </a></li>
+        <li id="two"><a href="recipes/karaage.html"> Chicken Karaage </a></li>
+        <li id="three"><a href="recipes/teriyaki.html"> Chicken Teriyaki </a></li>
         </ul>
 
         
